fixing tsconfig.json for React 17

--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -15,7 +15,9 @@
     "moduleResolution": "node",
     "noEmit": true,
     "noEmitOnError": true,
-    "removeComments": false,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "removeComments": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
