--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "cra-template-ts-prettier-eslint-airbnb",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "template.json",
   "description": "Template for Create React App supporting TypeScript and SASS/SCSS files. Included with Prettier and ESlint config recommended by Airbnb.",
   "keywords": [
-    "airbnb",
-    "cra",
-    "create-react-app",
-    "eslint",
+    "airbnb-eslint",
+    "cra-template-typescript",
     "prettier",
     "react",
-    "template",
-    "typescript"
+    "react17",
+    "sass",
+    "scss"
   ],
-  "engines": {
-    "node": ">=8.10"
-  },
   "license": "MIT",
   "repository": {
     "type": "git",
