--- a/template/.eslintrc.json
+++ b/template/.eslintrc.json
@@ -20,6 +20,7 @@
     "eslint-plugin-import-helpers"
   ],
   "rules": {
+    "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-empty-interface": ["error", {
         "allowSingleExtends": true
       }
@@ -38,6 +39,9 @@
         ["parent", "sibling", "index"]
       ],
       "newlinesBetween": "always"
+    }],
+    "max-len": ["error", {
+      "code": 130
     }],
     "no-multiple-empty-lines": ["error", {
       "max": 1
@@ -58,6 +62,7 @@
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "react/state-in-constructor": ["error", "never"],
+    "semi": "error",
     "sort-imports": ["error", {
       "ignoreCase": true,
       "ignoreDeclarationSort": true
