--- a/template/public/manifest.json
+++ b/template/public/manifest.json
@@ -1,25 +1,25 @@
 {
-  "background_color": "#ffffff",
-  "display": "standalone",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "sizes": "64x64 32x32 24x24 16x16",
       "src": "favicon.ico",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "sizes": "64x64 32x32 24x24 16x16"
     },
     {
-      "sizes": "192x192",
       "src": "logo192.png",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "sizes": "512x512",
       "src": "logo512.png",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
-  "name": "React App",
-  "short_name": "React App",
   "start_url": ".",
-  "theme_color": "#000000"
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
