fix: Eslint plugin prettier to version 8

--- a/template/.eslintrc.json
+++ b/template/.eslintrc.json
@@ -4,8 +4,7 @@
     "airbnb/hooks",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier/react",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
