--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -8,5 +8,6 @@
     "editor.codeActionsOnSave": {
       "source.fixAll": true
     }
-  }
+  },
+  "typescript.preferences.quoteStyle": "single"
 }
