--- a/template/.eslintrc.json
+++ b/template/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": [
+    "airbnb",
     "airbnb-typescript",
     "airbnb/hooks",
     "plugin:@typescript-eslint/eslint-recommended",
@@ -12,21 +13,19 @@
       "jsx": true
     },
     "ecmaVersion": 2018,
-    "project": "tsconfig.json",
+    "project": "./tsconfig.json",
     "sourceType": "module"
   },
   "plugins": [
     "eslint-plugin-import-helpers"
   ],
   "rules": {
-    "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-empty-interface": ["error", {
         "allowSingleExtends": true
       }
     ],
     "@typescript-eslint/no-explicit-any": "off",
     "comma-dangle": "off",
-    "global-require": "off",
     "import-helpers/order-imports": ["error", {
       "alphabetize": {
         "ignoreCase": true,
@@ -38,9 +37,6 @@
         ["parent", "sibling", "index"]
       ],
       "newlinesBetween": "always"
-    }],
-    "max-len": ["error", {
-      "code": 130
     }],
     "no-multiple-empty-lines": ["error", {
       "max": 1
@@ -57,11 +53,8 @@
     "react/jsx-sort-props": ["error", {
       "ignoreCase": true
     }],
-    "react/jsx-uses-react": "off",
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
-    "react/state-in-constructor": ["error", "never"],
-    "semi": "error",
     "sort-imports": ["error", {
       "ignoreCase": true,
       "ignoreDeclarationSort": true
